Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42850

local (incompatible) libwebp used when building instead of 3rd party-lib

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.1
    • 5.4.0 Beta
    • Image formats
    • None
    • Crosscompilation to Raspbian Wheezy from Ubuntu 14.04
    • 9141782adabcfd374285c3a52b7c386b9b90aa9a

      When crosscompiling Qt5.4 beta I'm getting an error when it comes to qtimageformats (I've shortened pathes for better readability):

      $COMPILER_DIR/arm-linux-gnueabihf-g++ -c -pipe -marm -mfpu=vfp -mtune=arm1176jzf-s -march=armv6zk -mabi=aapcs-linux -mfloat-abi=hard --sysroot=$RASPBIAN_MOUNT_DIR -O2 -fvisibility=hidden -fvisibility-inlines-hidden -std=c++0x -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_XKB -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_PLUGIN -DQT_GUI_LIB -DQT_CORE_LIB -I$INSTALL_DIR/mkspecs/devices/linux-rasp-pi-g++ -I. -I$RASPBIAN_MOUNT_DIR/opt/vc/include/interface/vcos/pthreads -I$RASPBIAN_MOUNT_DIR/opt/vc/include -I$RASPBIAN_MOUNT_DIR/opt/vc/include/interface/vmcs_host/linux -I$RASPBIAN_MOUNT_DIR/opt/QtCrosscompile_5_4_0_beta/include -I$RASPBIAN_MOUNT_DIR/opt/QtCrosscompile_5_4_0_beta/include/QtGui -I$RASPBIAN_MOUNT_DIR/opt/QtCrosscompile_5_4_0_beta/include/QtCore -I.moc -o .obj/qwebphandler.o qwebphandler.cpp
      qwebphandler.cpp: In member function ‘virtual bool QWebpHandler::write(const QImage&)’:
      qwebphandler.cpp:150:13: error: ‘WebPPicture’ has no member named ‘use_argb’
           picture.use_argb = 1;
                   ^
      qwebphandler.cpp:162:12: error: ‘struct WebPConfig’ has no member named ‘lossless’
           config.lossless = m_lossless;
                  ^
      

      This seems to be caused by having installed an incompatible version of libwebp within the Rasbian-Image and that this one is used.

      The short output of qmake that I got before running make has been:

      Checking for jasper... yes
      Checking for libmng... yes
      Checking for libtiff... yes
      Checking for libwebp... yes
      

      The command I'm using to build qtbase is:

      sudo ./configure -release -opensource -confirm-license -opengl es2 -optimized-qmake -make libs -make tools -reduce-exports -sysroot $RASPBIAN_MOUNT_DIR -device rasp-pi -device-option CROSS_COMPILE=$COMPILER_DIR/arm-linux-gnueabihf- -prefix $INSTALL_DIR -I$RASPBIAN_MOUNT_DIR/opt/vc/include/interface/vcos/pthreads -I$RASPBIAN_MOUNT_DIR/opt/vc/include -I$RASPBIAN_MOUNT_DIR/opt/vc/include/interface/vmcs_host/linux
      

      The versions installed on the Raspbian-Image are the current default libwebp2 and libwebp-dev packages that can be received by apt-get install. It does not seem to me that the current test for libwebp (./config.tests/libwebp/libwebp.cpp) checks for this compatibility.

      For further information I've appended the config.log (with shortened paths again).

        1. config.log
          5 kB
          Ralf Spengler
        For Gerrit Dashboard: QTBUG-42850
        # Subject Branch Project Status CR V

            vgt Eirik Aavitsland
            raspe88 Ralf Spengler
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes