config.tests/libwebp/libwebp.cpp
@@ -32,12 +32,21 @@
 ****************************************************************************/
 
 #include <webp/decode.h>
+#include <webp/encode.h>
+
+#if WEBP_ABI_IS_INCOMPATIBLE(WEBP_DECODER_ABI_VERSION, 0x0203) || WEBP_ABI_IS_INCOMPATIBLE(WEBP_ENCODER_ABI_VERSION, 0x0202)
+#error "Incompatible libwebp version"
+#endif
 
 int main(int, char **)
 {
     WebPDecoderConfig config;
     WebPDecBuffer *output_buffer = &config.output;
     WebPBitstreamFeatures *bitstream = &config.input;
+    WebPPicture picture;
+    picture.use_argb = 0;
+    WebPConfig config2;
+    config2.lossless = 0;
 
     return 0;
 }
